Update API and server to support data format changes
